hlsfdc/main/default/objects/Help_Lightning_Config__c/fields/Create_Events__c.field-meta.xml
<CustomField>
    <fullName>Create_Events__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Calendar Events from Calls</label>
    <type>Checkbox</type>
</CustomField>