hlsfdc/main/default/objects/Help_Lightning_Config__c/fields/Enterprise_Id__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Id__c</fullName>
    <label>Enterprise Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>