hlsfdc/main/default/objects/Help_Lightning_Config__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <defaultValue>&quot;US&quot;</defaultValue>
    <description>The Help Lightning Environment to connect to.</description>
    <inlineHelpText>Please set this to the Help Lightning Environment that this component should use (e.g. US - United States / EU - European Union)</inlineHelpText>
    <label>Environment</label>
    <length>128</length>
    <type>Text</type>
</CustomField>