hlsfdc/main/default/objects/Help_Lightning_Config__c/fields/Has_Site_Key__c.field-meta.xml
<CustomField>
    <fullName>Has_Site_Key__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Site Key</label>
    <type>Checkbox</type>
</CustomField>