hlsfdc/main/default/objects/Help_Lightning_Config__c/fields/Login__c.field-meta.xml
<CustomField>
    <fullName>Login__c</fullName>
    <description>By default, the Help Lightning component will use your Salesforce.com login as your Help Lightning account. If your Help Lightning login is different than your Salesforce.com login, you can override it using this attribute.</description>
    <inlineHelpText>Override your Help Lightning login.</inlineHelpText>
    <label>Login</label>
    <type>Email</type>
</CustomField>