hlsfdc/main/default/objects/Help_Lightning_Config__c/fields/Private_Key_1__c.field-meta.xml
<CustomField>
    <fullName>Private_Key_1__c</fullName>
    <label>Private Key 1</label>
    <type>TextArea</type>
</CustomField>