hlsfdc/main/default/objects/Help_Lightning_Config__c/fields/Private_Key_2__c.field-meta.xml
<CustomField>
    <fullName>Private_Key_2__c</fullName>
    <label>Private Key 2</label>
    <type>TextArea</type>
</CustomField>