hlsfdc/main/default/objects/Help_Lightning_Config__c/fields/Private_Key_3__c.field-meta.xml
<CustomField>
    <fullName>Private_Key_3__c</fullName>
    <label>Private Key 3</label>
    <type>TextArea</type>
</CustomField>