hlsfdc/main/default/objects/Help_Lightning_Config__c/fields/Save_Attachments__c.field-meta.xml
<CustomField>
    <fullName>Save_Attachments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Save Screenshots From Calls</label>
    <type>Checkbox</type>
</CustomField>