hlsfdc/main/default/objects/Help_Lightning_Config__c/fields/Workspace_Id__c.field-meta.xml
<CustomField>
    <fullName>Workspace_Id__c</fullName>
    <label>Workspace Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>